# GTest

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
banking/: Account.cpp  CMakeLists.txt  Transaction.cpp
tests/: test.cpp
